--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
            <label>Prediction-</label>
            <p id="resultGesture"></p>
            <p id="resultEmoji"></p>
+           <p id="resultConfidence"></p>
         </div>
   
         <div class="col-md-4 col-sm-12 col-xs-12">
